--- a/app/parts/head.html
+++ b/app/parts/head.html
@@ -1,1 +1,30 @@
-<div>навигация</div>
+<div class="header">
+	<div class="nav">
+		<div>
+			<a href=""><img src="../images/dist/logo.svg" alt="logo" /></a>
+		</div>
+		<div class="nav__main">
+			<a href="">MAIN</a>
+			<a href="">about</a>
+			<a href="">game features</a>
+			<a href="">System requirements</a>
+			<a href="">quotes</a>
+		</div>
+		<div class="nav__useful">
+			<select class="nav__useful_lang">
+				<option selected>eng</option>
+				<option>us</option>
+				<option>fra</option>
+				<option>deu</option>
+			</select>
+			<div>
+				<a href=""><img src="../images/dist/xbox.svg" alt="xbox" /> </a>
+			</div>
+			<div>
+				<a href=""><img src="../images/dist/steam.svg" alt="steam" /></a>
+			</div>
+		</div>
+	</div>
+	<div></div>
+	<div></div>
+</div>
