Заголовок  кроме вып список и бг картинки

--- a/app/parts/head.html
+++ b/app/parts/head.html
@@ -25,6 +25,15 @@
 			</div>
 		</div>
 	</div>
-	<div></div>
-	<div></div>
+	<div class="header__title">
+		<h1>SURVIVE AT ALL COSTS<span>Experience new social battle royale game</span></h1>
+		<button class="button button--buy">
+			<div class="button--buy--border">Buy now on Steam</div>
+			<div>$14.99</div>
+		</button>
+	</div>
+	<div class="header__footer">
+		<div>The story</div>
+		<img src="../images/dist/scroll.svg" alt="scroll" />
+	</div>
 </div>
