--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 
 <div class="container">
 	<!--#include virtual="/parts/head.html" -->
+	<!--#include virtual="/parts/about.html" -->
 </div>
 
 <!--#include virtual="/parts/footer.html" -->
