--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 <div class="container">
 	<!--#include virtual="/parts/head.html" -->
 	<!--#include virtual="/parts/about.html" -->
+	<!--#include virtual="/parts/features.html" -->
 </div>
 
 <!--#include virtual="/parts/footer.html" -->
