--- a/app/parts/about.html
+++ b/app/parts/about.html
@@ -1,14 +1,34 @@
 <div class="about">
-	<div class="about__title">
+	<div class="title">
 		<div>What is SOS?</div>
 		<h2>social battle royale game</h2>
 	</div>
-	<img src="../images/dist/line.svg" alt="line" />
+	<div class="about_line">
+		<img src="../images/dist/line.svg" alt="line" />
+	</div>
 	<p class="about__about">
 		Each round, you and 15 other contestants compete to escape a deadly island filled with monsters. The trick is:
 		three people can survive. Will you run solo or form friendships with others to escape? <br />
 		<br />
 		Making the right decisions could be the difference between <span>life and death.</span>
 	</p>
-	<div></div>
+	<div class="about__slide1">
+		<img width="450px" height="600px" src="../images/dist/slide1.jpg" alt="image" />
+	</div>
+	<div class="about__slide2">
+		<img width="400px" height="550px" src="../images/dist/slide2.jpg" alt="image" />
+	</div>
+	<div class="about__slide3">
+		<img width="350px" height="500px" src="../images/dist/slide3.jpg" alt="image" />
+	</div>
+	<div class="about__scroll">
+		<img src="../images/dist/scrollright.svg" alt="scroll" />
+	</div>
+	<div class="about__slider">
+		<div></div>
+		<progress value="10" max="100"></progress>
+		<div></div>
+		<progress value="10" max="100"></progress>
+		<div></div>
+	</div>
 </div>
