--- a/app/parts/about.html
+++ b/app/parts/about.html
@@ -1,5 +1,5 @@
 <div class="about">
-	<div class="title">
+	<div class="title title__about">
 		<div>What is SOS?</div>
 		<h2>social battle royale game</h2>
 	</div>
