--- a/app/parts/features.html
+++ b/app/parts/features.html
@@ -1,6 +1,32 @@
 <div class="features">
-	<div class="title">
+	<div class="title title__features">
 		<div>What’s so special?</div>
 		<h2>features</h2>
+	</div>
+	<div class="features__lists">
+		<div class="features__list">
+			<input type="radio" name="circle" />
+			SURVIVE AT ALL COSTS
+			<p class="features__list__list1">
+				You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
+				chopper.
+			</p>
+		</div>
+		<div class="features__list">
+			<input type="radio" name="circle" />
+			CREATE ALLIES AND ENEMIES
+			<p class="features__list__list2">
+				You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
+				chopper.
+			</p>
+		</div>
+		<div class="features__list">
+			<input type="radio" name="circle" />
+			IMPRESS THE AUDIENCE
+			<p class="features__list__list3">
+				You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
+				chopper.
+			</p>
+		</div>
 	</div>
 </div>
