--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 	<!--#include virtual="/parts/head.html" -->
 	<!--#include virtual="/parts/about.html" -->
 	<!--#include virtual="/parts/features.html" -->
+	<!--#include virtual="/parts/requirements.html" -->
 </div>
 
 <!--#include virtual="/parts/footer.html" -->
