--- a/app/parts/about.html
+++ b/app/parts/about.html
@@ -13,13 +13,13 @@
 		Making the right decisions could be the difference between <span>life and death.</span>
 	</p>
 	<div class="about__slide1">
-		<img width="450px" height="600px" src="../images/dist/slide1.jpg" alt="image" />
+		<img class="about__slide__foto" width="450px" height="600px" src="../images/dist/slide1.jpg" alt="image" />
 	</div>
 	<div class="about__slide2">
-		<img width="400px" height="550px" src="../images/dist/slide2.jpg" alt="image" />
+		<img class="about__slide__foto" width="400px" height="550px" src="../images/dist/slide2.jpg" alt="image" />
 	</div>
 	<div class="about__slide3">
-		<img width="350px" height="500px" src="../images/dist/slide3.jpg" alt="image" />
+		<img class="about__slide__foto" width="350px" height="500px" src="../images/dist/slide3.jpg" alt="image" />
 	</div>
 	<div class="about__scroll">
 		<img src="../images/dist/scrollright.svg" alt="scroll" />
