--- a/app/parts/requirements.html
+++ b/app/parts/requirements.html
@@ -4,10 +4,27 @@
 		<h2>system requirements</h2>
 	</div>
 	<div class="requirements__list">
-		<div class="requirements__list__os"></div>
-		<div class="requirements__list__processor"></div>
-		<div class="requirements__list__memory"></div>
-		<div class="requirements__list__storage"></div>
-		<div class="requirements__list__graphics"></div>
+		<div class="requirements__list__item">
+			<div class="requirements__list__item__title">OS:</div>
+			<div class="requirements__list__item__subtitle">Windows 7 64-bit only (No OSX support at this time)</div>
+		</div>
+		<div class="requirements__list__item">
+			<div class="requirements__list__item__title">PROCESSOR:</div>
+			<div class="requirements__list__item__subtitle">Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8 GHZ</div>
+		</div>
+		<div class="requirements__list__item">
+			<div class="requirements__list__item__title">MEMORY:</div>
+			<div class="requirements__list__item__subtitle">8 GB RAM</div>
+		</div>
+		<div class="requirements__list__item">
+			<div class="requirements__list__item__title">storage:</div>
+			<div class="requirements__list__item__subtitle">8 GB available space</div>
+		</div>
+		<div class="requirements__list__item">
+			<div class="requirements__list__item__title">GRAPHICS</div>
+			<div class="requirements__list__item__subtitle">
+				NVIDIA GeForce GTX 660 2GB or AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)
+			</div>
+		</div>
 	</div>
 </div>
