--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 	<!--#include virtual="/parts/about.html" -->
 	<!--#include virtual="/parts/features.html" -->
 	<!--#include virtual="/parts/requirements.html" -->
+	<!--#include virtual="/parts/quotes.html" -->
 </div>
 
 <!--#include virtual="/parts/footer.html" -->
