--- a/app/parts/about.html
+++ b/app/parts/about.html
@@ -4,9 +4,9 @@
 		<h2>social battle royale game</h2>
 	</div>
 	<div class="about_line">
-		<img src="../images/dist/line.svg" alt="line" />
+		<!-- <img src="../images/dist/line.svg" alt="line" /> -->
 	</div>
-	<p class="about__about">
+	<p class="description description--align description--about">
 		Each round, you and 15 other contestants compete to escape a deadly island filled with monsters. The trick is:
 		three people can survive. Will you run solo or form friendships with others to escape? <br />
 		<br />
