--- a/app/parts/features.html
+++ b/app/parts/features.html
@@ -5,25 +5,31 @@
 	</div>
 	<div class="features__lists">
 		<div class="features__list">
-			<input type="radio" name="circle" />
-			SURVIVE AT ALL COSTS
-			<p class="features__list__list1">
+			<div class="description__title description__title--big">
+				<input type="radio" name="circle" />
+				SURVIVE AT ALL COSTS
+			</div>
+			<p class="description description--align description--features description--feature1">
 				You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
 				chopper.
 			</p>
 		</div>
 		<div class="features__list">
-			<input type="radio" name="circle" />
-			CREATE ALLIES AND ENEMIES
-			<p class="features__list__list2">
+			<div class="description__title description__title--big">
+				<input type="radio" name="circle" />
+				CREATE ALLIES AND ENEMIES
+			</div>
+			<p class="description description--align description--features description--feature2">
 				You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
 				chopper.
 			</p>
 		</div>
 		<div class="features__list">
-			<input type="radio" name="circle" />
-			IMPRESS THE AUDIENCE
-			<p class="features__list__list3">
+			<div class="description__title description__title--big">
+				<input type="radio" name="circle" />
+				IMPRESS THE AUDIENCE
+			</div>
+			<p class="description description--align description--features description--feature3">
 				You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
 				chopper.
 			</p>
