--- a/app/parts/quotes.html
+++ b/app/parts/quotes.html
@@ -1,35 +1,42 @@
 <div class="quotes">
-	<div>
+	<div class="quotes__main">
 		<div class="title title__quotes">
 			<div>What people think?</div>
 			<h2>Press quotes</h2>
 		</div>
-		<p class="description">
-			In order to start receiving our news, all you have to do is enter your email address. Everything else will
-			be taken care of by us. We will send you emails containing information about game. We don’t spam.
+		<p class="description description--quotes">
+			Our goal is to create a product and service that you’re satisfied with and use it every day. This is why
+			we’re constantly working on our services to make it better every day and really listen to what our users has
+			to say.
 		</p>
 		<button class="button">
 			<div class="">Read more testimonials</div>
 		</button>
 	</div>
-	<div>
-		<div>
-			<div>
+	<div class="quotes__cards">
+		<div class="quotes__card">
+			<div class="quotes__card__title quotes__card__title--foto1">
 				<div class="description__title">Evan Lahti</div>
-				<p class="description">PC Gamer</p>
+				<p class="description description--opacity">PC Gamer</p>
 			</div>
-			<div>“One of my gaming highlights of the year.”</div>
-			<div>October 18, 2018</div>
+			<div class="quotes__quote">“One of my gaming highlights of the year.”</div>
+			<div class="quotes__date">October 18, 2018</div>
 		</div>
-		<div>
-			<div></div>
-			<div></div>
-			<div></div>
+		<div class="quotes__card quotes__card--medium">
+			<div class="quotes__card__title quotes__card__title--foto2">
+				<div class="description__title">Jada Griffin</div>
+				<p class="description description--opacity">Nerdreactor</p>
+			</div>
+			<div class="quotes__quote">“The next big thing in the world of streaming and survival games.”</div>
+			<div class="quotes__date">December 21, 2018</div>
 		</div>
-		<div>
-			<div></div>
-			<div></div>
-			<div></div>
+		<div class="quotes__card quotes__card--lower">
+			<div class="quotes__card__title quotes__card__title--foto3">
+				<div class="description__title">Aaron Williams</div>
+				<p class="description description--opacity">Uproxx</p>
+			</div>
+			<div class="quotes__quote">“Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”</div>
+			<div class="quotes__date">December 24, 2018</div>
 		</div>
 	</div>
 </div>
