--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 	<!--#include virtual="/parts/features.html" -->
 	<!--#include virtual="/parts/requirements.html" -->
 	<!--#include virtual="/parts/quotes.html" -->
+	<!--#include virtual="/parts/subscribe.html" -->
 </div>
 
 <!--#include virtual="/parts/footer.html" -->
