сабскрайб готов кроме фото + начал футер

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 	<!--#include virtual="/parts/requirements.html" -->
 	<!--#include virtual="/parts/quotes.html" -->
 	<!--#include virtual="/parts/subscribe.html" -->
+	<!--#include virtual="/parts/footer_main.html" -->
 </div>
 
 <!--#include virtual="/parts/footer.html" -->
