--- a/app/parts/subscribe.html
+++ b/app/parts/subscribe.html
@@ -1,47 +1,14 @@
-<div class="subscribe__footer">
-	<div class="subscribe">
-		<div class="title title__subscribe">
-			<div>Want to stay in touch?</div>
-			<h2>newsletter SUBSCRIBE</h2>
-		</div>
-		<p class="description description__subscribe">
-			In order to start receiving our news, all you have to do is enter your email address. Everything else will
-			be taken care of by us. We will send you emails containing information about game. We don’t spam.
-		</p>
-		<div class="subscribe__email">
-			<input type="email" placeholder="Your email address" />
-			<button class="button">Subscribe now</button>
-		</div>
+<div class="subscribe">
+	<div class="title title__subscribe">
+		<div>Want to stay in touch?</div>
+		<h2>newsletter SUBSCRIBE</h2>
 	</div>
-	<footer>
-		<div>
-			<div class="nav">
-				<div>
-					<a href=""><img src="../images/dist/big_logo.svg" alt="logo" /></a>
-				</div>
-				<div class="nav__main">
-					<a href="">MAIN</a>
-					<a href="">about</a>
-					<a href="">game features</a>
-					<a href="">System requirements</a>
-					<a href="">quotes</a>
-				</div>
-				<div class="nav__useful">
-					<div>
-						<a href=""><img src="../images/dist/facebook.svg" alt="xbox" /> </a>
-					</div>
-					<div>
-						<a href=""><img src="../images/dist/twitter.svg" alt="xbox" /> </a>
-					</div>
-					<div>
-						<a href=""><img src="../images/dist/youtube.svg" alt="xbox" /> </a>
-					</div>
-					<div>
-						<a href=""><img src="../images/dist/twitch.svg" alt="steam" /></a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div></div>
-	</footer>
+	<p class="description description__subscribe">
+		In order to start receiving our news, all you have to do is enter your email address. Everything else will be
+		taken care of by us. We will send you emails containing information about game. We don’t spam.
+	</p>
+	<div class="subscribe__email">
+		<input type="email" placeholder="Your email address" />
+		<button class="button">Subscribe now</button>
+	</div>
 </div>
