--- a/app/parts/footer_main.html
+++ b/app/parts/footer_main.html
@@ -1,9 +1,9 @@
-<footer>
-	<div>
-		<div class="nav">
-			<div>
-				<a href=""><img src="../images/dist/big_logo.svg" alt="logo" /></a>
-			</div>
+<footer class="footer">
+	<div class="footer__top">
+		<div>
+			<a href=""><img src="../images/dist/big_logo.svg" alt="logo" /></a>
+		</div>
+		<div class="nav nav__footer">
 			<div class="nav__main">
 				<a href="">MAIN</a>
 				<a href="">about</a>
@@ -11,7 +11,7 @@
 				<a href="">System requirements</a>
 				<a href="">quotes</a>
 			</div>
-			<div class="nav__useful">
+			<div class="nav__useful nav__useful--footer">
 				<div>
 					<a href=""><img src="../images/dist/facebook.svg" alt="xbox" /> </a>
 				</div>
@@ -27,5 +27,10 @@
 			</div>
 		</div>
 	</div>
-	<div></div>
+	<div class="footer__low">
+		<div class="footer__low__left">© 2018 Outpost Games, Inc. All Rights Reserved</div>
+		<div class="footer__low__right">
+			<a href="">Privacy Policy | Terms of Services | Code of Conduct</a>
+		</div>
+	</div>
 </footer>
