ссылки переходы по странице

--- a/app/parts/about.html
+++ b/app/parts/about.html
@@ -1,4 +1,4 @@
-<div class="about">
+<div id="s1" class="about">
 	<div class="title title__about">
 		<div>What is SOS?</div>
 		<h2>social battle royale game</h2>
