--- a/app/parts/features.html
+++ b/app/parts/features.html
@@ -1,4 +1,4 @@
-<div class="features">
+<div id="s2" class="features">
 	<div class="title title__features">
 		<div>What’s so special?</div>
 		<h2>features</h2>
