--- a/app/parts/footer_main.html
+++ b/app/parts/footer_main.html
@@ -5,11 +5,11 @@
 		</div>
 		<div class="nav nav__footer">
 			<div class="nav__main">
-				<a href="">MAIN</a>
-				<a href="">about</a>
-				<a href="">game features</a>
-				<a href="">System requirements</a>
-				<a href="">quotes</a>
+				<a href="#s0">MAIN</a>
+				<a href="#s1">about</a>
+				<a href="#s2">game features</a>
+				<a href="#s3">System requirements</a>
+				<a href="#s4">quotes</a>
 			</div>
 			<div class="nav__useful nav__useful--footer">
 				<div>
