--- a/app/parts/head.html
+++ b/app/parts/head.html
@@ -1,14 +1,14 @@
-<div class="header">
+<div id="s0" class="header">
 	<div class="nav">
 		<div>
 			<a href=""><img src="../images/dist/logo.svg" alt="logo" /></a>
 		</div>
 		<div class="nav__main">
-			<a href="">MAIN</a>
-			<a href="">about</a>
-			<a href="">game features</a>
-			<a href="">System requirements</a>
-			<a href="">quotes</a>
+			<a href="#s0">MAIN</a>
+			<a href="#s1">about</a>
+			<a href="#s2">game features</a>
+			<a href="#s3">System requirements</a>
+			<a href="#s4">quotes</a>
 		</div>
 		<div class="nav__useful">
 			<select class="nav__useful_lang">
@@ -34,6 +34,6 @@
 	</div>
 	<div class="header__footer">
 		<div>The story</div>
-		<img src="../images/dist/scroll.svg" alt="scroll" />
+		<a href="#s1"><img src="../images/dist/scroll.svg" alt="scroll" /></a>
 	</div>
 </div>
