--- a/app/parts/quotes.html
+++ b/app/parts/quotes.html
@@ -1,4 +1,4 @@
-<div class="quotes">
+<div id="s4" class="quotes">
 	<div class="quotes__main">
 		<div class="title title__quotes">
 			<div>What people think?</div>
