--- a/app/parts/requirements.html
+++ b/app/parts/requirements.html
@@ -1,4 +1,4 @@
-<div class="requirements">
+<div id="s3" class="requirements">
 	<div class="title title__requirements">
 		<div>Can My Computer Run this game?</div>
 		<h2>system requirements</h2>
