--- a/app/parts/about.html
+++ b/app/parts/about.html
@@ -3,9 +3,7 @@
 		<div>What is SOS?</div>
 		<h2>social battle royale game</h2>
 	</div>
-	<div class="about_line">
-		<!-- <img src="../images/dist/line.svg" alt="line" /> -->
-	</div>
+	<div class="about_line"></div>
 	<p class="description description--align description--about">
 		Each round, you and 15 other contestants compete to escape a deadly island filled with monsters. The trick is:
 		three people can survive. Will you run solo or form friendships with others to escape? <br />
@@ -25,10 +23,14 @@
 		<img src="../images/dist/scrollright.svg" alt="scroll" />
 	</div>
 	<div class="about__slider">
-		<div></div>
-		<progress value="10" max="100"></progress>
-		<div></div>
-		<progress value="10" max="100"></progress>
-		<div></div>
+		<div class="about__slider__circle"></div>
+		<div class="about__slider__progress">
+			<div class="about__slider__progress1"></div>
+		</div>
+		<div class="about__slider__circle"></div>
+		<div class="about__slider__progress">
+			<div class="about__slider__progress2"></div>
+		</div>
+		<div class="about__slider__circle"></div>
 	</div>
 </div>
