--- a/app/parts/about.html
+++ b/app/parts/about.html
@@ -23,14 +23,17 @@
 		<img src="../images/dist/scrollright.svg" alt="scroll" />
 	</div>
 	<div class="about__slider">
-		<div class="about__slider__circle"></div>
+		<div class="about__slider__circle p1"></div>
 		<div class="about__slider__progress">
 			<div class="about__slider__progress1"></div>
 		</div>
-		<div class="about__slider__circle"></div>
+		<div class="about__slider__circle p2"></div>
 		<div class="about__slider__progress">
 			<div class="about__slider__progress2"></div>
 		</div>
-		<div class="about__slider__circle"></div>
+		<div class="about__slider__circle p3"></div>
+		<div class="about__slider__progress">
+			<div class="about__slider__progress3"></div>
+		</div>
 	</div>
 </div>
