--- a/app/parts/features.html
+++ b/app/parts/features.html
@@ -6,33 +6,39 @@
 	<div class="features__lists">
 		<div class="features__list">
 			<div class="description__title description__title--big">
-				<input type="radio" name="circle" />
-				SURVIVE AT ALL COSTS
+				<input type="radio" id="r1" name="circle" checked />
+				<label for="r1"
+					>SURVIVE AT ALL COSTS <br />
+					<span class="description description--align description--feature"
+						>You have 30 minutes to find a relic, signal for&nbsp;extraction, and grab one of three spots on
+						the rescue chopper.</span
+					>
+				</label>
 			</div>
-			<p class="description description--align description--features description--feature1">
-				You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
-				chopper.
-			</p>
 		</div>
 		<div class="features__list">
 			<div class="description__title description__title--big">
-				<input type="radio" name="circle" />
-				CREATE ALLIES AND ENEMIES
+				<input type="radio" id="r2" name="circle" />
+				<label for="r2"
+					>CREATE ALLIES AND ENEMIES
+					<span class="description description--align description--feature"
+						>You have 30 minutes to find a relic, signal for&nbsp;extraction, and grab one of three spots on
+						the rescue chopper.</span
+					>
+				</label>
 			</div>
-			<p class="description description--align description--features description--feature2">
-				You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
-				chopper.
-			</p>
 		</div>
 		<div class="features__list">
 			<div class="description__title description__title--big">
-				<input type="radio" name="circle" />
-				IMPRESS THE AUDIENCE
+				<input type="radio" id="r3" name="circle" />
+				<label for="r3"
+					>IMPRESS THE AUDIENCE
+					<span class="description description--align description--feature"
+						>You have 30 minutes to find a relic, signal for&nbsp;extraction, and grab one of three spots on
+						the rescue chopper.</span
+					>
+				</label>
 			</div>
-			<p class="description description--align description--features description--feature3">
-				You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
-				chopper.
-			</p>
 		</div>
 	</div>
 </div>
