--- a/app/parts/requirements.html
+++ b/app/parts/requirements.html
@@ -20,7 +20,7 @@
 			<div class="description__title">storage:</div>
 			<div class="description">8 GB available space</div>
 		</div>
-		<div class="requirements__list__item requirements__list__item--width">
+		<div class="requirements__list__item requirements__list__item--width requirements__border__decorate">
 			<div class="description__title">GRAPHICS</div>
 			<div class="description">
 				NVIDIA GeForce GTX 660 2GB or <br />
