--- a/app/parts/about.html
+++ b/app/parts/about.html
@@ -1,4 +1,5 @@
 <div id="s1" class="about">
+	<div class="about__layer"></div>
 	<div class="title title__about">
 		<div>What is SOS?</div>
 		<h2>social battle royale game</h2>
@@ -8,7 +9,7 @@
 		Each round, you and 15 other contestants compete to escape a deadly island filled with monsters. The trick is:
 		three people can survive. Will you run solo or form friendships with others to escape? <br />
 		<br />
-		Making the right decisions could be the difference between <span>life and death.</span>
+		Making the right decisions could be the difference between <span class="about__underline">life and death.</span>
 	</p>
 	<div class="about__slide1">
 		<img class="about__slide__foto" width="450px" height="600px" src="../images/dist/slide1.jpg" alt="image" />
