--- a/app/parts/subscribe.html
+++ b/app/parts/subscribe.html
@@ -1,14 +1,18 @@
 <div class="subscribe">
-	<div class="title title__subscribe">
-		<div>Want to stay in touch?</div>
-		<h2>newsletter SUBSCRIBE</h2>
-	</div>
-	<p class="description description__subscribe">
-		In order to start receiving our news, all you have to do is enter your email address. Everything else will be
-		taken care of by us. We will send you emails containing information about game. We don’t spam.
-	</p>
-	<div class="subscribe__email">
-		<input type="email" placeholder="Your email address" />
-		<button class="button">Subscribe now</button>
+	<!-- FIXME: картинку надо предварительно обрезать в каком нить редакторе -->
+	<img class="subscribe__image" src="../images/dist/skull.jpg" alt="черепушка" />
+	<div class="subscribe__content">
+		<div class="title title__subscribe">
+			<div>Want to stay in touch?</div>
+			<h2>newsletter SUBSCRIBE</h2>
+		</div>
+		<p class="description description__subscribe">
+			In order to start receiving our news, all you have to do is enter your email address. Everything else will
+			be taken care of by us. We will send you emails containing information about game. We don’t spam.
+		</p>
+		<div class="subscribe__email">
+			<input type="email" placeholder="Your email address" />
+			<button class="button">Subscribe now</button>
+		</div>
 	</div>
 </div>
